RESOLVED FIXED119532
Assertion failure in emitExpressionInfo when reloading with Web Inspector open
https://bugs.webkit.org/show_bug.cgi?id=119532
Summary Assertion failure in emitExpressionInfo when reloading with Web Inspector open
Mark Lam
Reported 2013-08-06 17:05:15 PDT
Steps to reproduce (using a debug build): 1. Open <https://www.hsbccreditcard.com> (no need to log in) 2. Open Web Inspector (Cmd+Option+C) 3. Reload The issue is that the Parser's JSTokenLocation is not fully initialized during construction. Once this is fixed, the above assertion no longer manifests. ref: <rdar://problem/14633089>
Attachments
the patch (1.37 KB, patch)
2013-08-06 17:13 PDT, Mark Lam
oliver: review+
Mark Lam
Comment 1 2013-08-06 17:13:04 PDT
Created attachment 208229 [details] the patch
Mark Lam
Comment 2 2013-08-06 17:18:58 PDT
Thanks for the review. Landed in r153774: <http://trac.webkit.org/r153774>.
Note You need to log in before you can comment on or make changes to this bug.