Assertion failure in emitExpressionInfo when reloading with Web Inspector open. https://bugs.webkit.org/show_bug.cgi?id=119532.

Reviewed by Oliver Hunt.

* parser/Parser.cpp:
(JSC::::Parser):
- Just need to initialize the Parser's JSTokenLocation's initial line and
  startOffset as well during Parser construction.



Canonical link: https://commits.webkit.org/137489@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153774 268f45cc-cd09-0410-ab3c-d52691b4dbfc